--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Fortnite Pack A Punch</title>
 </head>
+
 <body>
-    <h1>Hello World</h1>
+
 </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>CSS Website Layout</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+
+    <div class="header">
+        <h1>FORTNITE PACK A PUNCH</h1>
+    </div>
+
+    <div class="topnav">
+        <a href="#">OMGGG YOUR A BOTTTT!</a>
+    </div>
+
+    <div class="row">
+        <div class="column">
+            <h2>S-K-I-N-S</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                tortor sed accumsan convallis.</p>
+        </div>
+
+        <div class="column">
+            <h2>C-O-M-B-I-N-A-T-I-O-N</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                tortor sed accumsan convallis.</p>
+        </div>
+
+        <div class="column">
+            <h2>R-A-R-E--R-A-T-I-N-G-S</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                tortor sed accumsan convallis.</p>
+        </div>
+    </div>
+
+</body>
+</body>
+
 </html>
