Made all changes adding css and html adding imgs.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>Fortnite Pack A Punch</title>
 </head>
 
-<body>
-
+<body class="gif">
 </body>
 <!DOCTYPE html>
 <html lang="en">
@@ -26,37 +25,10 @@
     <div class="header">
         <h1>FORTNITE PACK A PUNCH</h1>
     </div>
-
-    <div class="topnav">
-        <a href="#">OMGGG YOUR A BOTTTT!</a>
+    <div class="skulltrooper">
+        <a href="page1.html" target="__blank">CLICK HERE BOTTT!</a>
     </div>
-
-    <div class="row">
-        <div class="column">
-            <h2>S-K-I-N-S</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
-                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
-                tortor sed accumsan convallis.</p>
-        </div>
-
-        <div class="column">
-            <h2>C-O-M-B-I-N-A-T-I-O-N</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
-                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
-                tortor sed accumsan convallis.</p>
-        </div>
-
-        <div class="column">
-            <h2>R-A-R-E--R-A-T-I-N-G-S</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
-                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
-                tortor sed accumsan convallis.</p>
-        </div>
-    </div>
-
+    
 </body>
 </body>
 
