renamed files and added another page to  website.

--- a/landing_page.html
+++ b/landing_page.html
@@ -9,27 +9,15 @@
     <title>Fortnite Pack A Punch</title>
 </head>
 
-<body class="gif">
-</body>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>CSS Website Layout</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
 <body>
 
     <div class="header">
         <h1>FORTNITE PACK A PUNCH</h1>
     </div>
     <div class="skulltrooper">
-        <a href="page1.html" target="__blank">CLICK HERE BOTTT!</a>
+        <img src="./images/fornite_biggie.jpg">
+        <!-- {% comment %} <a href="page1.html" target="__blank">CLICK HERE BOTTT!</a> {% endcomment %} -->
     </div>
-    
-</body>
 </body>
 
 </html>
