--- a/cosmetics_page.html
+++ b/cosmetics_page.html
@@ -14,7 +14,7 @@
     
     </div>
     <div class="details">
-        <a href="index.html">HOME</a>
+        <a href="landing_page.html">HOME</a>
     </div>
     <div class="containers">
         <div class="box1">
