--- a/skins_page.html
+++ b/skins_page.html
@@ -18,7 +18,7 @@
 </div>
 <div class="detail">
     <p>Hey my name is Jaylan and these are my skins that I am selling.
-            <a href="last.html">Click here</a> to look at cosmetics.
+            <a href="cosmetics_page.html">Click here</a> to look at cosmetics.
     </p>
 </div>
 <div class="container">
