--- a/ending_page.html
+++ b/ending_page.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Goodye</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ending.css">
 </head>
-<body class="thanks">
-    
+<body class="image">
 </body>
 </html>
