--- a/landing_page.html
+++ b/landing_page.html
@@ -15,7 +15,7 @@
         <h1>FORTNITE PACK A PUNCH</h1>
     </div>
     <div class="skulltrooper">
-        <img src="./images/fornite_biggie.jpg">
+        <img src="./images/fortnitebutton.jpg">
         <!-- {% comment %} <a href="page1.html" target="__blank">CLICK HERE BOTTT!</a> {% endcomment %} -->
     </div>
 </body>
